# codex-mcp-cyber

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  README_EN.md  config.example.toml  pyproject.toml  setup.bat  setup.ps1  setup.sh  uninstall.bat  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
cases/2025-01-05-unit-test-generation/: README.md
docs/adr/: 0001-wire-freeze-and-line-stream-seam.md  0002-review-result-and-to-wire.md  0003-attempt-outcome-internal-seam.md  0004-single-mcp-wire-shell.md  0005-single-tool-result-redaction.md  0006-line-stream-terminal-predicate.md  0007-popen-runner-absorbs-safe-codex.md  0008-process-outcome-single-channel.md  0009-stream-outcome-domain-words.md  0010-metrics-from-result-and-sleep-seam.md
scripts/: repro_os_error_123.py
skills/cc-review/: SKILL.md  codex-guide.md  critical-modules.md  examples.md  review-checklist.md  scenarios.md
skills/gemini-collaboration/: SKILL.md  gemini-guide.md
skills/sccg-workflow/: SKILL.md  coder-guide.md  examples.md
src/codex_mcp_cyber/: __init__.py  classify.py  cli.py  errors.py  paths.py  process.py  redact.py  review.py  server.py  stream.py  winlink.py  winsec.py
src/codex_mcp_cyber/tools/: __init__.py  codex.py
src/sccg_mcp/: __init__.py  cli.py  config.py  server.py
src/sccg_mcp/tools/: __init__.py  coder.py  codex.py  gemini.py
templates/: sccg-global-prompt.md
tests/: runners.py  test_contract_docs.py  test_path_hardening.py  test_process_popen.py  test_repo_imports.py  test_review.py  test_review_run.py  test_stream_reduce.py  winsec_fake.py
