[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-mcp-cyber"
version = "0.4.0"
description = "Claude + Codex 代码审查 MCP 服务器"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]
authors = [
    { name = "codex-mcp-cyber Contributors" },
]
license = { text = "MIT" }
keywords = ["mcp", "fastmcp", "codex", "claude", "code-review"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ZeroStarlet/codex-mcp-cyber"

[project.scripts]
codex-mcp-cyber = "codex_mcp_cyber.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_mcp_cyber"]

[tool.hatch.build.targets.sdist]
include = ["src/codex_mcp_cyber", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
